[gd_scene load_steps=2 format=3 uid="uid://kai2sftuw5vi"]

[ext_resource type="Script" uid="uid://bamilx6sa3boo" path="res://wave_manager.gd" id="1_ustui"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_ustui")
default_spawn_delay = 5.0

[node name="EnemySpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
